改行の変更並びにボタンコンポーネントの透明化

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <body>
         <div class="header">
             <div class="header-logo">
-                QR　　　　物品管理
+                <p>QR</p>
+                <p>物品管理</p>
             </div>
             <div class="hamburger-menu">
                 <input type="checkbox" id="menu-btn-check">
